The page now generates the output automatically based on a geocache.loc file of all the way points a bug has been to and a list of each cache per person.  Treffynnon's navigator library was used (via composer) to make the coordinate calculations easier. The size of the cache trail font was made slightly smaller to allow for longer names no wrapping quite so much.

--- a/css/app.scss
+++ b/css/app.scss
@@ -153,6 +153,7 @@ ol.trail {
   margin: 0;
   text-align: center;
   > li {
+    font-size: 0.844rem;
     > a {
       font-weight: bold;
     }
